--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Malware Analysis by Yuriibe
-description: Technical blog on reversing, payloads, and malware behaviors.
+title: writeup-vault by Yuriibe
+description: A collection of technical writeups on CTFs, malware analysis, exploitation, and infosec research.
 theme: jekyll-theme-hacker
 show_downloads: false
